<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="ga_trackingId">UA-17974252-7</string>
    <string name="app_name">Citi Bike</string>
    <string name="bikes_label">Bikes</string>
    <string name="docks_label">Docks</string>
    <string name="calculating">Calculating</string>
    <string name="continue_button">Continue</string>
    <string name="default_timer">00:00</string>
    <string name="default_value">00</string>
    <string name="default_distance">0.0</string>
    <string name="distance_miles">mi</string>
    <string name="distance_kilometer">km</string>
    <string name="inactive">Station Inactive</string>
    <string name="label">Label</string>
    <string name="dropped_pin">Loading…</string>
    <string name="toast_icon_desc">Toast Message</string>
    <string name="main_container_menu_timer">Timer</string>
    <string name="main_container_menu_search">Search</string>
    <string name="menu_map">Map</string>
    <string name="menu_stations">Stations</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_safety">Riding Tips</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_more">Get Started</string>
    <string name="file_station">station.json</string>
    <string name="file_branch">branch.json</string>
    <string name="file_helmet">helmet.json</string>
    <string name="main_map_buttons_clear_desc">Clear</string>
    <string name="main_map_buttons_layers_desc">Layers</string>
    <string name="main_map_buttons_current_location_desc">Current Locaiton</string>
    <string name="main_exit_dialog_button">Quit</string>
    <string name="main_exit_dialog_title">Exit</string>
    <string name="main_exit_dialog_message">Are you sure you want to exit Citi Bike?</string>
    <string name="main_play_services_error_dialog_title">Missing Service</string>
    <string name="main_play_services_error_dialog_message">Citi Bike requires Google Play Services. Please enable Google Play Services and re-launch Citi Bike.</string>
    <string name="main_network_dialog_title">Connection Error</string>
    <string name="main_network_dialog_message">You are currently offline and not all features will work properly.</string>
    <string name="main_favorite_loading_dialog_title">Favorite Loading</string>
    <string name="main_favorite_loading_dialog_message">The address of has not loaded and cannot be added as a favorite yet.</string>
    <string name="howitworks_use">Use of this app and Citi Bike constitutes acceptance of &lt;a href=http://citibikenyc.com/terms-of-use/>Citi Bike Terms of Use Agreement&lt;/a> and &lt;a href=http://citibikenyc.com/privacy>Privacy Policy&lt;/a>.</string>
    <string name="safety_bike_smart_downloads">Download &lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure.pdf>Bike Smart in English&lt;/a>&lt;br />&lt;br />Also available in:&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_haitian.pdf>Haitian Creole (Kreyòl Ayisyen)&lt;/a>&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_italian.pdf>Italian (italiano)&lt;/a>&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_korean.pdf>Korean (한국어판)&lt;/a>&lt;br />&lt;br /> &lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_mandarin.pdf>Chinese (中文版)&lt;/a>&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_russian.pdf>Russian (русском языке)&lt;/a>&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_spanish.pdf>Spanish (español)&lt;/a>&lt;br /></string>
    <string name="safety_bike_smart_expert">Want to talk to an expert about urban bike riding? Visit &lt;a href=http://www.citibikenyc.com/>www.citibikenyc.com&lt;/a> for information on free city cycling classes held frequently throughout NYC.</string>
    <string name="terms_agree_button">Agree &amp; Continue</string>
    <string name="safety_tips_title">Ride Safely</string>
    <string name="safety_tips_list">"Yield to pedestrians.
Stay off the sidewalk.
Obey traffic lights.
Ride with traffic."</string>
    <string name="safety_tips_disclaimer">"You must be 16 or older
to ride Citi Bike.
Citi Bike encourages you
to wear a helmet."</string>
    <string name="how_about_title">How It Works: About Citi Bike</string>
    <string name="how_about_h1">An efficient way to get around NYC</string>
    <string name="how_about_h2">Simple, Reliable Bikes</string>
    <string name="how_about_h3">Keeping NYC moving</string>
    <string name="how_about_p1">Citi Bike is operated by NYC Bike Share LLC (a wholly-owned subsidiary of Alta Bicycle Share). It features thousands of bikes in hundreds of stations throughout NYC.</string>
    <string name="how_about_p2">Citi Bike bicycles are durable, sturdy and regularly maintained. They can be rented using an Annual Member key or ride code that releases them from docking stations.</string>
    <string name="how_about_p3">Citi Bike is designed for short trips around New York, so that bikes can be returned to stations within the allotted 30-minute window (45-minute for Annual Members) and become available for other riders. It is not intended for longer, all-day usage.</string>
    <string name="how_return_title">How It Works: Return</string>
    <string name="how_ride_title">How It Works: Ride</string>
    <string name="how_ride_h1">Ride Wherever You Want</string>
    <string name="how_ride_h2">Keep your eye on the clock.</string>
    <string name="how_ride_h3">Unlimited Rides</string>
    <string name="how_ride_h4">Subsequent Rides</string>
    <string name="how_ride_p1">Once your Pass has been purchased, rides up to 30 minutes (45 minutes with Annual Membership) are no extra charge. Extra charges apply for longer rides.</string>
    <string name="how_ride_p2">Know your ride time limit!</string>
    <string name="how_ride_p3">Ride as many times as you want during your Pass or Annual Membership period. Keep pedaling!</string>
    <string name="how_ride_p4">24-Hour and 7-Day Pass holders must request a new ride code to unlock another bike. Just swipe your credit or debit card at the kiosk to generate a new code. Your card will not be charged. Annual Members just dip their key into a dock to release another bike and ride again!</string>
    <string name="how_app_help_h1">Search</string>
    <string name="how_app_help_h2">Bike &amp; dock availability</string>
    <string name="how_app_help_h3">Plan a Route</string>
    <string name="how_app_help_h4">Track Time Limit</string>
    <string name="how_app_help_h5">Save Your Favorites</string>
    <string name="how_app_help_h6">Bike Routes</string>
    <string name="how_app_help_h7">Map Options</string>
    <string name="how_app_help_p1">Enter a word or phrase in the search bar to bring up exact matches as well as similarly-worded matches. Citi Bike stations will appear first in search results.</string>
    <string name="how_app_help_p2">Simply tap on the station icon to get an exact number of bikes &amp; docks available. For a quick estimate, the dark blue represents bikes and the light blue represents docks.</string>
    <string name="how_app_help_p3">"There are two ways to get directions to a destination:
1) Search bar: Enter a search term and select a location from the generated list.
2) Map: Tap any station pin on the map to begin routing, or press and hold on any location on the map to prompt a location highlight."</string>
    <string name="how_app_help_p4">Use the timer to keep track of your 30-minute time limit (45-minute for Annual Members). Please note that the timer will be just an estimate of your actual allotted time, since your 30 minutes begins the moment you unlock your bike.</string>
    <string name="how_app_help_p5">Simply tap the “favorites” icon whenever you see it and the station or place will be automatically added to your own custom list. (This can be turned off in settings.)</string>
    <string name="how_app_help_p6">As an option within map layers, you can opt to have all streets with bike lanes displayed in green.</string>
    <string name="how_app_help_p7">Tap the layers icon and you’ll have various other options you can turn on &amp; off that reveal such details as bike shops, Citi Branches and more.</string>
    <string name="intro_details">"Each pin marks a station.
Tap to get number of bikes and docks available."</string>
    <string name="intro_details_available">Available</string>
    <string name="intro_details_map_desc">Map</string>
    <string name="intro_details_marker_desc">Station Marker</string>
    <string name="intro_details_right_arrow_desc">Right Arrow</string>
    <string name="intro_details_left_arrow_desc">Left Arrow</string>
    <string name="more_items_app_help">App Help</string>
    <string name="settings_title">Settings</string>
    <string name="settings_membership_label">Membership</string>
    <string name="settings_membership_day">Short-Term</string>
    <string name="settings_membership_annual">Annual</string>
    <string name="settings_distance_label">Distance</string>
    <string name="settings_distance_mi">Mi</string>
    <string name="settings_distance_km">Km</string>
    <string name="settings_threed_label">3D</string>
    <string name="settings_threed_on">On</string>
    <string name="settings_threed_off">Off</string>
</resources>