<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:clickable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" style="@style/IntroContainer">
        <LinearLayout android:id="@id/intro_fragment" style="@style/IntroMain">
            <com.citibikenyc.citibike.helpers.AnimatedIntroLayer android:layout_gravity="center" android:id="@id/intro_details_animated_intro_layer" android:layout_width="240.0dip" android:layout_height="wrap_content">
                <ImageView android:id="@id/intro_details_map" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="140.0dip" android:src="@drawable/intro_map" android:layout_centerHorizontal="true" android:contentDescription="@string/intro_details_map_desc" />
                <ImageView android:id="@id/intro_details_marker" android:paddingTop="60.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/intro_marker" android:layout_centerHorizontal="true" android:contentDescription="@string/intro_details_marker_desc" />
                <ImageView android:id="@id/intro_details_right_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="128.0dip" android:src="@drawable/intro_right_arrow" android:contentDescription="@string/intro_details_right_arrow_desc" />
                <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/intro_details_bikes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bikes_label" android:layout_below="@id/intro_details_right_arrow" />
                <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/intro_details_bikes_available" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_details_available" android:layout_below="@id/intro_details_bikes" />
                <ImageView android:id="@id/intro_details_left_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:src="@drawable/intro_left_arrow" android:layout_alignParentRight="true" android:contentDescription="@string/intro_details_left_arrow_desc" />
                <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="16.0sp" android:textColor="#ff333333" android:id="@id/intro_details_docks" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="66.0dip" android:text="@string/docks_label" android:layout_below="@id/intro_details_left_arrow" android:layout_alignParentRight="true" />
                <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/intro_details_docks_available" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intro_details_available" android:layout_below="@id/intro_details_docks" android:layout_alignParentRight="true" />
            </com.citibikenyc.citibike.helpers.AnimatedIntroLayer>
            <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="16.0sp" android:textColor="#ff747474" android:layout_marginTop="20.0dip" android:layout_marginBottom="12.0dip" android:text="@string/intro_details" style="@style/IntroTextView" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:background="@drawable/button_container_bg" android:padding="5.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="52.0dip">
        <Button android:id="@id/intro_details_continue" android:clickable="true" android:text="@string/continue_button" style="@style/DoneButton" />
    </LinearLayout>
</LinearLayout>